# sgm_parser

./: .gitignore  README.md  SGM_PATCH_FLAGS.md  pyproject.toml
examples/: cube_creature.py
fxtool/: README.md  fxrender.py  fxtool.py
sgm_parser/: __init__.py  anim.py  attributes.py  binary.py  constants.py  creature.py  ebp.py  fxlua.py  fxsim.py  limbscale.py  luatable.py  model.py  parser.py  scene.py  validate.py
sgm_parser/chunks/: __init__.py  base.py  common.py  creature.py  scene.py
