[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sgm-parser"
version = "0.1.0"
description = "A modular reader/writer for Impossible Creatures .sgm files"
readme = "README.md"
requires-python = ">=3.8"
# Standard library only.
dependencies = []

[tool.setuptools.packages.find]
include = ["sgm_parser*"]
